fix alignment problem and nav width

--- a/static/style.css
+++ b/static/style.css
@@ -190,35 +190,36 @@ header,
 /* ---nav--- */
 /* problem */
 nav {
-  justify-content: space-between;
   position: fixed;
   z-index: 1;
   background-color: white;
   height: 54px;
   top: 0; /* for staying on top */
   width: 100%;
-  /* max-width: 1920px;
-  min-width: 1200px; */
   border-color: #e8e8e8;
   border-style: solid;
   border-width: 0 0 1px 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+nav > div {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav h1 {
   font-size: 30px;
   color: #448899;
   padding: 10px 0;
-  margin-left: 360px;
 }
 
 nav a {
   color: #666666;
   line-height: 3.5;
   font-weight: normal;
-}
-
-.signInAndReserveBox {
-  margin-right: 360px;
 }
 
 .signInAndReserveBox li {
@@ -336,18 +337,22 @@ p {
 /* ---main--- */
 .showCase {
   width: 100%;
-  margin: 0 auto;
   max-width: 1200px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
-  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .showCase li {
-  width: 270px;
+  width: 250px;
   border: 1px solid #e8e8e8;
   border-radius: 5px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.showCase li:nth-child(4n) {
+  margin-right: 0;
 }
 
 .pics img {
@@ -597,7 +602,11 @@ input[type="radio"] {
   /* 下面圖片RWD的關鍵 */
   .showCase > li {
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 15px auto;
+  }
+
+  .showCase li:nth-child(4n) {
+    margin: 0 auto 15px auto;
   }
 
   .showCase > li > img {
@@ -687,7 +696,11 @@ input[type="radio"] {
   /* 下面圖片RWD的關鍵 */
   .showCase > li {
     width: 45%;
-    margin: 0 auto;
+    margin: 0 auto 15px auto;
+  }
+
+  .showCase li:nth-child(4n) {
+    margin: 0 auto 15px auto;
   }
 
   .showCase > li > img {
